# shell

./: .bazelrc  BUILD  MODULE.axl  MODULE.bazel  README.bazel.md
.aspect/: task.axl
.aspect/cli/: config.yaml
.github/workflows/: multitool.yml
tools/: BUILD  repin
